@@ -5,6 +5,7 @@ Revision history for WWW::Mechanize
 
     [DOCUMENTATION]
     - Document that click_button() will die when it cannot find a button (GH#136) (Julien Fiegehenn)
+    - Document that content() returns undef before a request was made (GH#134) (Julien Fiegehenn)
 
 2.01      2020-09-18 17:51:10Z
     - Add rel filter to find_link() (GH#305) (Julien Fiegehenn)
